# hermes-monitor

./: .gitignore  CHANGELOG.md  README.md
backend/: Dockerfile  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  aggregation.py  auth.py  config.py  cost.py  db.py  ingestion.py  main.py  models.py  pages.py  proxy.py  recording.py  settings_service.py  tokens.py  upstreams.py
backend/app/api/: __init__.py  errors.py  export.py  providers.py  settings.py  stats.py  traces.py
backend/templates/: base.html  detail.html  errors.html  overview.html  settings.html  stats.html
backend/tests/: __init__.py  conftest.py  test_aggregation.py  test_cost.py  test_errors.py  test_export.py  test_ingestion.py  test_privacy.py  test_providers.py  test_proxy.py  test_settings.py  test_tokens.py
docs/: HERMES_SETUP.md
fpk/: manifest
fpk/app/docker/: docker-compose.yaml
fpk/app/ui/: config
fpk/cmd/: install_callback  install_init  main  uninstall_callback  uninstall_init  upgrade_callback  upgrade_init
fpk/config/: privilege  resource
scripts/: build-fpk.md
sdk/: README.md  pyproject.toml
sdk/hermes_monitor/: __init__.py  client.py
